@@ -1,12 +1,21 @@
 package io.signalharvester.security.application;
 
+import io.micronaut.core.annotation.Introspected;
 import io.signalharvester.security.model.UserRole;
-import java.util.Objects;
+import jakarta.validation.constraints.NotNull;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
 /** Administrative command for changing account state and explicit role assignments. */
-public record UpdateUserCommand(boolean enabled, Set<UserRole> roles) {
+@Introspected
+public record UpdateUserCommand(
+        boolean enabled,
+        @NotNull Set<@NotNull UserRole> roles) {
+
     public UpdateUserCommand {
-        roles = Set.copyOf(Objects.requireNonNull(roles, "roles"));
+        roles = roles == null
+                ? null
+                : Collections.unmodifiableSet(new LinkedHashSet<>(roles));
     }
 }
